--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Four Card Feature Section</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="icon" href="/four-card-feature/images/favicon-32x32.png">
+    <link rel="icon" href="/images/favicon-32x32.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap" rel="stylesheet">
@@ -25,7 +25,7 @@
                 <p>Monitors activity to identify project roadblocks</p>
             </div>
             <div class="flex">
-                <img src="/four-card-feature/images/icon-supervisor.svg" alt="icon supervisor">
+                <img src="/images/icon-supervisor.svg" alt="icon supervisor">
             </div>
         </article>
         <article class="article team-builder">
@@ -36,7 +36,7 @@
                 <p>Scans our talent network to create the optimal team for your project</p>
             </div>
             <div class="flex">
-                <img src="/four-card-feature/images/icon-team-builder.svg" alt="icon team Builder">
+                <img src="/images/icon-team-builder.svg" alt="icon team Builder">
             </div>
         </article>
         <article class="article karma">
@@ -47,7 +47,7 @@
                 <p>Regularly evaluates our talent to ensure quality</p>
             </div>
             <div class="flex">
-                <img src="/four-card-feature/images/icon-karma.svg" alt="icon team Builder">
+                <img src="/images/icon-karma.svg" alt="icon team Builder">
             </div>
         </article>
         <article class="article calculator">
@@ -58,7 +58,7 @@
                 <p>Uses data from past projects to provide better delivery estimates</p>
             </div>
             <div class="flex">
-                <img src="/four-card-feature/images/icon-calculator.svg" alt="icon team Builder">
+                <img src="/images/icon-calculator.svg" alt="icon team Builder">
             </div>
         </article>
     </main>
